--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,7 @@ html{
     color: white;
     padding: 8px 25px;
     transition: all .5s ease;
+    font-size: x-small;
 }
 .navbar ul li a:hover{
     background-color: white;
