--- a/assets/style.css
+++ b/assets/style.css
@@ -31,8 +31,15 @@ html{
     color: white;
     padding: 8px 25px;
     transition: all .5s ease;
-    font-size: x-small;
+    font-size: 16px;
 }
+
+@media only screen and (max-width: 600px) {
+    .navbar ul li a{
+        font-size: x-small;
+    }
+}
+
 .navbar ul li a:hover{
     background-color: white;
     color: black;
@@ -148,6 +155,14 @@ html{
     padding: 20px;
 }
 
+#contact{
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+}
+
+
 .row{
     display: flex;
     justify-content: space-around;
@@ -187,3 +202,95 @@ html{
 }
 
 
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+  input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  .container {
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    font-size: large;
+  }
+
+
+@media only screen and (max-width: 530px) {
+
+    /* Home */
+    #home{
+        height: 820px;
+    }
+
+    .heading{
+        font-size: 1.7rem;
+    }
+
+    /* About */
+    #pic img{
+        width: 50%;
+        height: auto;
+    }
+    #intro h2{
+        font-size: 1.5rem;
+    }
+
+
+    /* Portfolio */
+    .gallery img{
+        width: 250px;
+        height: 150px;
+        margin: 10px;
+    }
+
+}
+
+@media only screen and (max-width: 800px) {
+    
+    /* navbar */
+    .navbar ul{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    /* heading */
+    .heading{font-size: 2.5rem;
+    }
+
+    /* About */
+    #pic{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #pic img{
+        width: 50%;
+        height: auto;
+    }
+    .intro h2{
+        text-align: center;
+        padding: 10px;
+    }
+
+}
